[project]
name = "PetThermoTools"
version = "0.2.32"
description = "PetThermoTools"
authors = [
    {name = "Matthew Gleeson", email = "gleesonm@berkeley.edu"},
]
dependencies = [
    "setuptools>=80.1.0",
    "Thermobar",
    "julia",
    "matplotlib",
    "numpy<2",
    "pandas",
    "pyMelt",
    "scikit-learn",
    "scipy",
    "shapely",
    "tinynumpy",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "dask[complete]>=2025.4.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]


[project.urls]
Homepage = "https://github.com/gleesonm1/PetThermoTools"
[tool.pdm]
distribution = true
package-dir = "src"
